package eapli.base.domain.model;

public class Product {

    public Product() {

    }
}
