package eapli.base.application;

public class CreateOrderBySalesClerkController {

    final eapli.base.domain.model.Customer customer;
    final Product product;
    final Order order;
    List<Product> products;

    public CreateOrderBySaleClerkController {
        products=new ArrayList<>();
    }

    public findCustomerById(int id){

    }

    public ShowCustomerDto(){

    }

    public findProductById(int id){

    }

    public ShowProductDto(){

    }

    public AddProduct(){
        AddToProductList(product);
    }

    public AddToProductList(Product product){
        products.add(product);
    }

    public SaveOrder(){

    }

}